minWidth to stop checkbox layout breaking

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   width: 100%;
   height: 100%;
   overflow:hidden;
+  min-width: 20em;
 }
 
 .DIV_LayoutRoot
